--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -69,7 +69,7 @@
 	"block.betternether.cincinnasite_bricks": "Tijolos de cincinnasita",
 	"block.betternether.cincinnasite_bricks_pillar": "Pilar de tijolos de cincinnasita",
 	"block.betternether.cincinnasite_button": "Botão de cincinnasita",
-	"block.betternether.cincinnasite_carved": "Bloco de cincinnasita talhado",
+	"block.betternether.cincinnasite_carved": "Cincinnasita talhada",
 	"block.betternether.cincinnasite_forge": "Forja de cincinnasita",
 	"block.betternether.cincinnasite_forged": "Bloco de cincinnasita",
 	"block.betternether.cincinnasite_frame": "Emoldurado de cincinnasita",
@@ -81,7 +81,7 @@
 	"block.betternether.cincinnasite_pot": "Vaso de cincinnasita",
 	"block.betternether.cincinnasite_slab": "Laje de cincinnasita",
 	"block.betternether.cincinnasite_stairs": "Escadas de cincinnasita",
-	"block.betternether.cincinnasite_tile_large": "Bloco de cincinnasita lapidado",
+	"block.betternether.cincinnasite_tile_large": "Cincinnasita lapidada",
 	"block.betternether.cincinnasite_tile_small": "Ladrilhos de cincinnasita",
 	"block.betternether.cincinnasite_wall": "Muro de cincinnasita",
 
@@ -192,28 +192,28 @@
 	"block.betternether.eye_vine": "Trepadeira de globo ocular",
 	"block.betternether.black_apple": "Arbusto de maçã-negra",
 
-	"commands.findnethercity.usage.console": "No coordinates in input",
-	"commands.findnethercity.usage.coordinates": "Coordenadas erradas",
-	"commands.findnethercity.usage": "Wrong usage, must be /findNetherCity or /findNetherCity x y z",
+	"commands.findnethercity.usage.console": "Não há coordenadas definidas",
+	"commands.findnethercity.usage.coordinates": "As coordenadas estão erradas",
+	"commands.findnethercity.usage": "Uso errado, precisa ser /findNetherCity ou /findNetherCity x y z",
 	
-	"block.betternether.willow_branch": "Galho de infra-salgueiro",
-	"block.betternether.willow_leaves": "Folhas de infra-salgueiro",
-	"block.betternether.willow_trunk": "Lenho de infra-salgueiro",
-	"block.betternether.willow_log": "Tronco de infra-salgueiro",
-	"block.betternether.willow_bark": "Madeira de infra-salgueiro",
-	"block.betternether.willow_sapling": "Muda de infra-salgueiro",
+	"block.betternether.willow_branch": "Galho de salgueiro do Nether",
+	"block.betternether.willow_leaves": "Folhas de salgueiro do Nether",
+	"block.betternether.willow_trunk": "Lenho de salgueiro do Nether",
+	"block.betternether.willow_log": "Tronco de salgueiro do Nether",
+	"block.betternether.willow_bark": "Madeira de salgueiro do Nether",
+	"block.betternether.willow_sapling": "Muda de salgueiro do Nether",
 	
 	"block.betternether.swamp_grass": "Gramínea do pântano do Nether",
 	
-	"block.betternether.willow_planks": "Tábuas de infra-salgueiro",
-	"block.betternether.willow_stairs": "Escadas de infra-salgueiro",
-	"block.betternether.willow_slab": "Laje de infra-salgueiro",
-	"block.betternether.willow_fence": "Cerca de infra-salgueiro",
-	"block.betternether.willow_gate": "Portão de infra-salgueiro",
-	"block.betternether.willow_button": "Botão de infra-salgueiro",
-	"block.betternether.willow_plate": "Placa de pressão de infra-salgueiro",
-	"block.betternether.willow_trapdoor": "Alçapão de infra-salgueiro",
-	"block.betternether.willow_door": "Porta de infra-salgueiro",
+	"block.betternether.willow_planks": "Tábuas de salgueiro do Nether",
+	"block.betternether.willow_stairs": "Escadas de salgueiro do Nether",
+	"block.betternether.willow_slab": "Laje de salgueiro do Nether",
+	"block.betternether.willow_fence": "Cerca de salgueiro do Nether",
+	"block.betternether.willow_gate": "Portão de salgueiro do Nether",
+	"block.betternether.willow_button": "Botão de salgueiro do Nether",
+	"block.betternether.willow_plate": "Placa de pressão de salgueiro do Nether",
+	"block.betternether.willow_trapdoor": "Alçapão de salgueiro do Nether",
+	"block.betternether.willow_door": "Porta de salgueiro do Nether",
 	
 	"block.betternether.wart_planks": "Tábuas de fungo do Nether",
 	"block.betternether.wart_stairs": "Escadas de fungo do Nether",
@@ -240,7 +240,7 @@
 	"item.betternether.cincinnasite_leggings": "Calças de cincinnasita",
 	"item.betternether.cincinnasite_boots": "Botas de cincinnasita",
 	"item.betternether.cincinnasite_sword": "Espada de cincinnasita",
-	"item.betternether.cincinnasite_sword_diamond": "Espada de cincinnasita e diamante",
+	"item.betternether.cincinnasite_sword_diamond": "Espada de cincinnasita com diamante",
 	
 	"item.betternether.spawn_egg_firefly": "Ovo gerador de vagalume",
 	"item.betternether.cincinnasite_ingot": "Barra de cincinnasita",
@@ -300,7 +300,7 @@
 	"block.betternether.wart_bark": "Hifas de fungo do Nether",
 	"block.betternether.wart_roots": "Volva de fungo do Nether",
 	
-	"block.betternether.wall_moss": "Infra-musgo de parede",
+	"block.betternether.wall_moss": "Infra-musgo",
 	"block.betternether.wall_mushroom_brown": "Cogumelo marrom de parede",
 	"block.betternether.wall_mushroom_red": "Cogumelo vermelho de parede",
 	
@@ -316,35 +316,35 @@
 	"block.betternether.roof_tile_cincinnasite": "Telhas de cincinnasita",
 	"block.betternether.roof_tile_cincinnasite_stairs": "Escadas de telhas de cincinnasita",
 	"block.betternether.roof_tile_cincinnasite_slab": "Laje de telhas de cincinnasita",
-	"block.betternether.willow_roof": "Telhas de infra-salgueiro",
-	"block.betternether.willow_roof_stairs": "Escadas de telhas de infra-salgueiro",
-	"block.betternether.willow_roof_slab": "Laje de telhas de infra-salgueiro",
+	"block.betternether.willow_roof": "Telhas de salgueiro do Nether",
+	"block.betternether.willow_roof_stairs": "Escadas de telhas de salgueiro do Nether",
+	"block.betternether.willow_roof_slab": "Laje de telhas de salgueiro do Nether",
 	"block.betternether.roof_tile_wart": "Telhas de fungo do Nether",
 	"block.betternether.roof_tile_wart_stairs": "Escadas de telhas de fungo do Nether",
 	"block.betternether.roof_tile_wart_slab": "Laje de telhas de fungo do Nether",
 	
 	"block.betternether.taburet_reeds": "Banco de junco do Nether",
 	"block.betternether.stalagnate_taburet": "Banco de estalagnato",
-	"block.betternether.willow_taburet": "Banco de infra-salgueiro",
+	"block.betternether.willow_taburet": "Banco de salgueiro do Nether",
 	"block.betternether.taburet_wart": "Banco de fungo do Nether",
 	"block.betternether.taburet_cincinnasite": "Banco de cincinnasita",
 	
 	"block.betternether.stalagnate_ladder": "Escada de mão de estalagnato",
-	"block.betternether.willow_ladder": "Escada de mão de infra-salgueiro",
+	"block.betternether.willow_ladder": "Escada de mão de salgueiro do Nether",
 	"block.betternether.wart_ladder": "Escada de mão de fungo do Nether",
 	
 	"block.betternether.chair_reeds": "Cadeira de junco do Nether",
 	"block.betternether.stalagnate_chair": "Cadeira de estalagnato",
-	"block.betternether.willow_chair": "Cadeira de infra-salgueiro",
+	"block.betternether.willow_chair": "Cadeira de salgueiro do Nether",
 	"block.betternether.chair_wart": "Cadeira de fungo do Nether",
 	"block.betternether.chair_cincinnasite": "Cadeira de cincinnasita",
 	
 	"block.betternether.stalagnate_stripped_log": "Tora de estalagnato descascada",
-	"block.betternether.willow_stripped_log": "Tronco de infra-salgueiro descascado",
+	"block.betternether.willow_stripped_log": "Tronco de salgueiro do Nether descascado",
 	"block.betternether.striped_log_wart": "Caule de fungo do Nether descascado",
 	
 	"block.betternether.stalagnate_stripped_bark": "Madeira de estalagnato descascada",
-	"block.betternether.willow_stripped_bark": "Madeira de infra-salgueiro descascada",
+	"block.betternether.willow_stripped_bark": "Madeira de salgueiro do Nether descascada",
 	"block.betternether.striped_bark_wart": "Hifas de fungo do Nether descascadas",
 	
 	"block.betternether.giant_mold": "Mofo gigante",
@@ -352,7 +352,7 @@
 	
 	"block.betternether.bar_stool_reeds": "Banqueta de junco do Nether",
 	"block.betternether.stalagnate_bar_stool": "Banqueta de estalagnato",
-	"block.betternether.willow_bar_stool": "Banqueta de infra-salgueiro",
+	"block.betternether.willow_bar_stool": "Banqueta de salgueiro do Nether",
 	"block.betternether.bar_stool_wart": "Banqueta de fungo do Nether",
 	"block.betternether.bar_stool_cincinnasite": "Banqueta de cincinnasita",
 	
@@ -363,8 +363,8 @@
 	"biome.betternether.nether_mushroom_forest": "Floresta de cogumelos do Nether",
 	"biome.betternether.nether_mushroom_forest_edge": "Margem da floresta de cogumelos do Nether",
 	"biome.betternether.wart_forest_edge": "Margem da floresta de fungos do Nether",
-	"biome.betternether.sulfuric_bone_reef": "Recife ósseo sulfúrico",
-	"biome.betternether.bone_reef": "Recife ósseo",
+	"biome.betternether.sulfuric_bone_reef": "Recife de ossos sulfúrico",
+	"biome.betternether.bone_reef": "Recife de ossos",
 	"biome.betternether.poor_grasslands": "Prados estéreis",
 	"biome.betternether.nether_swampland": "Pântano do Nether",
 	"biome.betternether.nether_swampland_terraces": "Terraços do pântano do Nether",
@@ -545,7 +545,7 @@
 	
 	"block.betternether.stalagnate_crafting_table": "Bancada de estalagnato",
 	"block.betternether.crafting_table_reed": "Bancada de junco do Nether",
-	"block.betternether.willow_crafting_table": "Bancada de infra-salgueiro",
+	"block.betternether.willow_crafting_table": "Bancada de salgueiro do Nether",
 	"block.betternether.crafting_table_wart": "Bancada de fungo do Nether",
 	"block.betternether.rubeus_crafting_table": "Bancada de rúbeus",
 	"block.betternether.crafting_table_mushroom": "Bancada de cogumelo",
@@ -553,7 +553,7 @@
 	
 	"block.betternether.stalagnate_chest": "Baú de estalagnato",
 	"block.betternether.chest_reed": "Baú de junco do Nether",
-	"block.betternether.willow_chest": "Baú de infra-salgueiro",
+	"block.betternether.willow_chest": "Baú de salgueiro do Nether",
 	"block.betternether.chest_wart": "Baú de fungo do Nether",
 	"block.betternether.rubeus_chest": "Baú de rúbeus",
 	"block.betternether.chest_mushroom": "Baú de cogumelo",
@@ -568,7 +568,7 @@
 	
 	"block.betternether.stalagnate_sign": "Placa de estalagnato",
 	"block.betternether.sign_reed": "Placa de junco do Nether",
-	"block.betternether.willow_sign": "Placa de infra-salgueiro",
+	"block.betternether.willow_sign": "Placa de salgueiro do Nether",
 	"block.betternether.sign_wart": "Placa de fungo do Nether",
 	"block.betternether.rubeus_sign": "Placa de rúbeus",
 	"block.betternether.sign_mushroom": "Placa de cogumelo",
@@ -576,7 +576,7 @@
 	
 	"block.betternether.stalagnate_barrel": "Barril de estalagnato",
 	"block.betternether.barrel_reed": "Barril de junco do Nether",
-	"block.betternether.willow_barrel": "Barril de infra-salgueiro",
+	"block.betternether.willow_barrel": "Barril de salgueiro do Nether",
 	"block.betternether.barrel_wart": "Barril de fungo do Nether",
 	"block.betternether.rubeus_barrel": "Barril de rúbeus",
 	"block.betternether.barrel_mushroom": "Barril de cogumelo",
@@ -607,13 +607,13 @@
 	"block.betternether.lumabus_vine": "Trepadeira de lumábus",
 	"item.betternether.glowstone_pile": "Pilha de pedra luminosa",
 	"block.betternether.jellyfish_mushroom": "Cogumelo-medusa",
-	"block.betternether.jellyfish_mushroom_sapling": "Muda de cogumelo-medusa",
+	"block.betternether.jellyfish_mushroom_sapling": "Primórdia de cogumelo-medusa",
 	"block.betternether.bone_stalactite": "Espeleotema de osso",
 	"block.betternether.cincinnasite_chain": "Corrente de cincinnasita",
 	"block.betternether.nether_lapis_ore": "Minério de lápis-lazúli do Nether",
 	"item.betternether.lapis_pile": "Pilha de lápis-lazúli",
 	"item.betternether.cincinnasite_excavator": "Escavadora de cincinnasita",
-	"item.betternether.cincinnasite_excavator_diamond": "Escavadora de cincinnasita e diamante",
+	"item.betternether.cincinnasite_excavator_diamond": "Escavadora de cincinnasita com diamante",
 	"item.betternether.nether_ruby_excavator": "Escavadora de rubi",
 	
 	"block.betternether.sepia_mushroom_grass": "Cogugrama sulfúrica",
@@ -658,7 +658,7 @@
 	"block.betternether.anchor_tree_sapling": "Muda de ancorácea",
 	
 	"block.betternether.giant_lucis": "Lúcis gigante",
-	"block.betternether.moss_cover": "Tapete de infra-musgo",
+	"block.betternether.moss_cover": "Infra-musgo invertido",
 	
 	"block.betternether.nether_sakura_bark": "Madeira de sakura do Nether",
 	"block.betternether.nether_sakura_button": "Botão de sakura do Nether",
