--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -227,7 +227,7 @@
 	
 	"block.betternether.black_vine": "Trepadeiras negras",
 	"block.betternether.veined_sand": "Areia das almas venosa",
-	"block.betternether.soul_vein": "Veias das almas",
+	"block.betternether.soul_vein": "Veia das almas",
 	"block.betternether.blooming_vine": "Trepadeiras florescentes",
 	"block.betternether.golden_vine": "Trepadeiras douradas",
 	"block.betternether.geyser": "Gêiser",
