--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -2,7 +2,7 @@
 	"container.forge": "Forja",
 	"container.chest_of_drawers": "Gaveteiro",
 
-	"entity.betternether.firefly": "Vagalume",
+	"entity.betternether.firefly": "Vagalume do Nether",
 	"entity.betternether.hydrogen_jellyfish": "Medusa-hidrogênio",
 	"entity.betternether.naga_projectile": "Projétil de naga",
 	"entity.betternether.naga": "Naga",
