--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -193,7 +193,7 @@
 	"block.betternether.black_apple": "Arbusto de maçã-negra",
 
 	"commands.findnethercity.usage.console": "Não há coordenadas definidas",
-	"commands.findnethercity.usage.coordinates": "As coordenadas estão erradas",
+	"commands.findnethercity.usage.coordinates": "As coordenadas estão incorretas",
 	"commands.findnethercity.usage": "Uso errado, precisa ser /findNetherCity ou /findNetherCity x y z",
 	
 	"block.betternether.willow_branch": "Galho de salgueiro do Nether",
@@ -538,7 +538,7 @@
 	"config.betternether.reset": "Resetar",
 	"config.betternether.fog": "Distância do nevoeiro",
 	"config.betternether.lavafalls": "§b*§rPartículas das cachoeiras de lava",
-	"config.betternether.armour": "§b*§rArmadura fina",
+	"config.betternether.armour": "§b*§rArmadura",
 	
 	"block.betternether.crafting_table_crimson": "Bancada carmesim",
 	"block.betternether.crafting_table_warped": "Bancada distorcida",
@@ -631,31 +631,31 @@
 	"block.betternether.swampland_grass": "Grama do pântano do Nether",
 	"block.betternether.basalt_slab": "Laje de basalto",
 	
-	"block.betternether.anchor_tree_bark": "Madeira de ancorácea",
-	"block.betternether.anchor_tree_button": "Botão de ancorácea",
-	"block.betternether.anchor_tree_door": "Porta de ancorácea",
-	"block.betternether.anchor_tree_fence": "Cerca de ancorácea",
-	"block.betternether.anchor_tree_gate": "Portão de ancorácea",
-	"block.betternether.anchor_tree_ladder": "Escada de mão de ancorácea",
-	"block.betternether.anchor_tree_log": "Tronco de ancorácea",
-	"block.betternether.anchor_tree_planks": "Tábuas de ancorácea",
-	"block.betternether.anchor_tree_plate": "Placa de pressão de ancorácea",
-	"block.betternether.anchor_tree_slab": "Laje de ancorácea",
-	"block.betternether.anchor_tree_stairs": "Escadas de ancorácea",
-	"block.betternether.anchor_tree_trapdoor": "Alçapão de ancorácea",
-	"block.betternether.barrel_anchor_tree": "Barril de ancorácea",
-	"block.betternether.bar_stool_anchor_tree": "Banqueta de ancorácea",
-	"block.betternether.chair_anchor_tree": "Cadeira de ancorácea",
-	"block.betternether.chest_anchor_tree": "Baú de ancorácea",
-	"block.betternether.crafting_table_anchor_tree": "Alçapão de ancorácea",
-	"block.betternether.sign_anchor_tree": "Placa de ancorácea",
-	"block.betternether.striped_bark_anchor_tree": "Madeira de ancorácea descascada",
-	"block.betternether.striped_log_anchor_tree": "Tronco de ancorácea descascado",
-	"block.betternether.taburet_anchor_tree": "Banco de ancorácea",
+	"block.betternether.anchor_tree_bark": "Madeira de âncorácea",
+	"block.betternether.anchor_tree_button": "Botão de âncorácea",
+	"block.betternether.anchor_tree_door": "Porta de âncorácea",
+	"block.betternether.anchor_tree_fence": "Cerca de âncorácea",
+	"block.betternether.anchor_tree_gate": "Portão de âncorácea",
+	"block.betternether.anchor_tree_ladder": "Escada de mão de âncorácea",
+	"block.betternether.anchor_tree_log": "Tronco de âncorácea",
+	"block.betternether.anchor_tree_planks": "Tábuas de âncorácea",
+	"block.betternether.anchor_tree_plate": "Placa de pressão de âncorácea",
+	"block.betternether.anchor_tree_slab": "Laje de âncorácea",
+	"block.betternether.anchor_tree_stairs": "Escadas de âncorácea",
+	"block.betternether.anchor_tree_trapdoor": "Alçapão de âncorácea",
+	"block.betternether.barrel_anchor_tree": "Barril de âncorácea",
+	"block.betternether.bar_stool_anchor_tree": "Banqueta de âncorácea",
+	"block.betternether.chair_anchor_tree": "Cadeira de âncorácea",
+	"block.betternether.chest_anchor_tree": "Baú de âncorácea",
+	"block.betternether.crafting_table_anchor_tree": "Alçapão de âncorácea",
+	"block.betternether.sign_anchor_tree": "Placa de âncorácea",
+	"block.betternether.striped_bark_anchor_tree": "Madeira de âncorácea descascada",
+	"block.betternether.striped_log_anchor_tree": "Tronco de âncorácea descascado",
+	"block.betternether.taburet_anchor_tree": "Banco de âncorácea",
 	
-	"block.betternether.anchor_tree_vine": "Trepadeiras de ancorácea",
-	"block.betternether.anchor_tree_leaves": "Folhas de ancorácea",
-	"block.betternether.anchor_tree_sapling": "Muda de ancorácea",
+	"block.betternether.anchor_tree_vine": "Trepadeiras de âncorácea",
+	"block.betternether.anchor_tree_leaves": "Folhas de âncorácea",
+	"block.betternether.anchor_tree_sapling": "Muda de âncorácea",
 	
 	"block.betternether.giant_lucis": "Lúcis gigante",
 	"block.betternether.moss_cover": "Infra-musgo",
